Squished a couple of bugs

--- a/css/admin.css
+++ b/css/admin.css
@@ -97,3 +97,8 @@ header a{
     position: fixed;
     z-index: 99;
 }
+
+.hidden-overflow{
+    white-space: nowrap;
+    overflow: hidden;
+}
